# BlackHaven

./: .gitignore  DISCLAIMER.txt  Jvdm$1$2$3$4  Jvdm$1$2$3$4.pub  LICENSE  MANIFEST.in  README.md  blackhaven.py  index.html  install.sh  installer.sh  package-lock.json  package.json  preload.js  pyproject.tom  pyproject.toml  requirements.txt  script.js  setup.py  style.css  uninstall.sh  updater.py
blackhaven/: __init__.py  __main__.py  auth.py  database.py  main.py
blackhaven.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blackhaven/auth_pkg/: __init__.py  auth.py  db.py  errors.py  logger.py  login.py  owner.py  owner_manager.py  owner_registry.py  register.py  session.py
blackhaven/core/: __init__.py  intelligence.py  username_engine.py
blackhaven/database/: __init__.py  database.py
blackhaven/modules/: __init__.py  _utils.py  domain_info.py  email_lookup.py  intel_core.py  net.py  password_checker.py  port_scanner.py  system_info.py  username_search.py
blackhaven/security/: __init__.py  auth.py
blackhaven/ui/: __init__.py  banner.py  effects.py  logo.txt  (+1 more)
blackhaven_framework/: config.yaml  main.py  requirements.txt
config/: default.config.json
framework/: __init__.py  config.yaml
main/: config.js  main.js  networkTools.js  pluginManager.js  security.js  systemMonitor.js  terminalManager.js  tooling.js
plugins/: README.md
renderer/: app.js  index.html  styles.css
sessions/: session-20260208-181502.json  session-20260208-184138.json
skills/: god_osint_core.py  omega_core.py  username_intelligence_ultra.py
(+33 files in other folders)
