[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackhaven"
version = "3.0.0"
description = "BlackHaven - OSINT & Security Auditing Toolkit"
requires-python = ">=3.9"
dependencies = ["colorama", "rich", "prompt_toolkit", "bcrypt", "argon2-cffi"]

[project.scripts]
blackhaven = "blackhaven.main:main"

[tool.setuptools.package-data]
blackhaven = ["DISCLAIMER.txt", "data/*.json", "security/*.json"]
